@@ -90,6 +90,10 @@ Working version
   compaction algorithm and remove its dependence on the page table
   (Damien Doligez, review by Jacques-Henri Jourdan and Xavier Leroy)
 
+- #9742: Ephemerons are now compatible with infix pointers occuring
+   when using mutually recursive functions.
+   (Jacques-Henri Jourdan, review François Bobot)
+
 ### Code generation and optimizations:
 
 - #9551: ocamlc no longer loads DLLs at link time to check that
